// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton should render a number of times 1`] = `
<div
  className="skeleton"
>
  <div
    className="skeleton__content"
    key="0"
  />
  <div
    className="skeleton__content"
    key="1"
  />
  <div
    className="skeleton__content"
    key="2"
  />
  <div
    className="skeleton__content"
    key="3"
  />
</div>
`;

exports[`Skeleton should render correctly 1`] = `
<div
  className="skeleton"
>
  <div
    className="skeleton__content"
    key="0"
  />
</div>
`;
